# drug-shortage-dashboard

./: .gitignore  Drug_shortage_dashboard_prelim_graph.docx  README.md  SETUP.md  historical_data_clean.ipynb  main.py  pyproject.toml  render.yaml  requirements.txt  scheduler.py  test_etl.py
.streamlit/: config.toml
dashboard/: dash_app.py  streamlit_app.py
dashboard/assets/: style.css
data/: shortage_2019_2024_classified.csv  shortage_2019_2024_unique_available_classification.csv
data/drug_shortage_historical/: Drugshortages_2019.csv  Drugshortages_2020.csv  Drugshortages_2021.csv  Drugshortages_2022.csv  Drugshortages_2023.csv  Drugshortages_2024.csv  Drugshortages_2025_partial.csv
data/fda_cleaned_datafiles/: ActionTypes_Lookup.csv  Applications.csv  ApplicationsDocsType_Lookup.csv  MarketingStatus.csv  MarketingStatus_Lookup.csv  SubmissionClass_Lookup.csv  TE.csv
data/vedika_recompiled_historical/: Drug Shortage Data(01032022).csv  Drug Shortage Data(01242023).csv  Drug Shortage Data(02262021).csv  Drug Shortage Data(03132020).csv  Drug Shortage Data(06152024).csv  Drug Shortage Data(06292023).csv  Drug Shortage Data(07042021).csv  Drug Shortage Data(07092022).csv  Drug Shortage Data(09172020).csv  Drug Shortage Data(10032019).csv  Drug Shortage Data(12112023).csv
ds_db/: .user.yml  dbt_project.yml  profiles.yml
ds_db/models/marts/: dim_manufacturers.sql  drug_availability_episodes.sql  drug_shortage_episodes.sql  (+5 more)
etl/: fetch_fda_data.py  load_historical_csv.py
scripts/: run_weekly_etl.sh
sql/: create_staging_table.sql
src/: scratch.ipynb
(+4 files in other folders)
